--- a/frontend/src/styles/SearchBar.css
+++ b/frontend/src/styles/SearchBar.css
@@ -1,11 +1,11 @@
-.wrapper {
+.searchbar {
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 5px;
     border: 1px solid black;
     border-radius: 25px;
-    width: 100%;
+    width: 300px;
     background-color: #eddada;
 }
 
