--- a/frontend/src/styles/SearchPage.css
+++ b/frontend/src/styles/SearchPage.css
@@ -16,16 +16,36 @@
     margin: 0; 
 }
 
+.eventsWrapper {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 40px;
+    width: 100%;
+}
+
 .events {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    margin: 40px;
+    width: 100%;
+    gap: 40px;
+    padding: 40px;
+    flex-wrap: wrap;
+}
+
+.orgsWrapper {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 40px;
+    width: 100%;
 }
 
 .orgs {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    margin: 40px;
+    width: 100%;
+    gap: 40px;
+    padding: 40px;
+    flex-wrap: wrap;
 }
